--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Owls</title>
-    <style>
-        .nav-bar{
-            display: flex;
-            justify-content: space-around;
-        }
-    </style>
 </head>
 <body>
     <header>
-        <nav class="nav-bar"><a href="Links/Top.html"> Beautiful owls</a><a href="Links/shop.html">The shop</a><a href="">The interesting facts about the owl</a><a href="">About me</a></nav>
+        <nav class="nav-bar"><a href="Links/Top.html"> Beautiful owls</a><a href="Links/shop.html">The shop</a><a href="Links/Facts.html">The interesting facts about the owl</a></nav>
     </header>
+    <main>
+        <article class="article">
+            <section></section>
+            <section></section>
+        </article>
+        <aside class="aside">
+            <div>
+                <h1 align="center" class="news">News</h1>
+                <div class="new">
+                    <h4 align="center">Abnormally fat owl found unable to fly</h4>
+                    <p>The bird was taken to the Suffolk Owl Sanctuary, where staff said the owl was "too heavy to take to the air." Its weight is almost twice the usual due to the fact that fat deposits have accumulated on the owl's body as a result of overeating of rodents. She will be released into the wild after completing the "strict diet course".</p>
+                </div>
+            </div>
+        </aside>
+    </main>
 </body>
 </html>
