--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     </header>
     <main>
         <article class="article">
-            <section></section>
-            <section></section>
+            <section>
+
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/zUxPyoFjCEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+            <section>
+                <p>
+                    
+Owls have a sense of rhythm
+                </p>
+            </section>
         </article>
         <aside class="aside">
             <div>
