--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet"
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,18 +27,17 @@
                 <iframe width="400" height="315" src="https://www.youtube.com/embed/zUxPyoFjCEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
             <section>
-                <p>
-                    
-Owls have a sense of rhythm
-                </p>
+                <h1 class="text-to-video" align="center">
+                    Owls have a good sense of rhythm
+                </h1>
             </section>
         </article>
         <aside class="aside">
             <div>
                 <h1 align="center" class="news">News</h1>
-                <div class="new">
+                <div class="new" align="center">
                     <h4 align="center">Abnormally fat owl found unable to fly</h4>
-                    <p>The bird was taken to the Suffolk Owl Sanctuary, where staff said the owl was "too heavy to take to the air." Its weight is almost twice the usual due to the fact that fat deposits have accumulated on the owl's body as a result of overeating of rodents. She will be released into the wild after completing the "strict diet course".</p>
+                        <p>The bird was taken to the Suffolk Owl Sanctuary, where staff said the owl was "too heavy to take to the air." Its weight is almost twice the usual due to the fact that fat deposits have accumulated on the owl's body as a result of overeating of rodents. She will be released into the wild after completing the "strict diet course".</p>
                 </div>
             </div>
         </aside>
