--- a/Links/Top.html
+++ b/Links/Top.html
@@ -13,6 +13,14 @@
         .top{
             margin-left: 35%;
         }
+        body{
+            background: url(img/background.jpg);
+            
+        }
+        p{
+            color: white;
+            margin-left: 100px;
+        }
     </style>
 </head>
 <body>
