--- a/Links/Facts.html
+++ b/Links/Facts.html
@@ -61,13 +61,16 @@ button:active div{
     
     } */
     body{
-        background: url(img/eagle-owl.jpg);
+        background: url(img/fone-for-facts.png);
     }
     div{
         height: 100%;
     }
     p{
         color: white;
+    }
+    #carouselExampleCaptions{
+      margin-top: 50px;
     }
     </style>
 </head>
@@ -86,7 +89,7 @@ button:active div{
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <p align="center">The eyes of owls are completely motionless, which is why nature has awarded them such a flexible neck.</p>
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
@@ -96,7 +99,7 @@ button:active div{
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <p align="center">Eagle owls are the largest birds of prey on the planet, they even hunt golden eagles and young wild boars.</p>
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
