--- a/Links/Facts.html
+++ b/Links/Facts.html
@@ -61,7 +61,8 @@ button:active div{
     
     } */
     body{
-        background: url(img/fone-for-facts.png);
+        background: url(img/fone-for-facts.png) no-repeat;
+        background-size: 100%;
     }
     div{
         height: 100%;
@@ -75,12 +76,6 @@ button:active div{
     </style>
 </head>
 <body>
-<!-- <button>
-    The owl's flight is completely silent thanks to its special feathers.
-    <div>
-        <img src="img/pero.jpg" alt="">
-    </div>
-</button> -->
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
