--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <article class="article">
             <section>
 
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/zUxPyoFjCEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="iframe" width="400" height="315" src="https://www.youtube.com/embed/zUxPyoFjCEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
             <section>
                 <h1 class="text-to-video" align="center">
